// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form demo -- form 1`] = `
.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c7 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #FFF;
  border-color: #4683e6;
  background-color: #4683e6;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c7:hover {
  background-color: #3664c8;
}

.c7[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c11 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #6b798e;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c12 {
  display: table-cell;
  vertical-align: middle;
}

.c6 {
  display: inline-block;
  cursor: pointer;
}

.c8 {
  margin-left: 5px;
}

.c9 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c10 {
  border: none;
}

<form>
  <div
    class="c0 c1"
  >
    <div
      class="c2 c3 c4"
      span="3"
    >
      上传文件
    </div>
    <div
      class="c3 c5"
      span="9"
    >
      <div
        style="margin-bottom:5px;"
      >
        <div
          class="c6"
        >
          <input
            hidden=""
            type="file"
          />
          <button
            class="c7"
            type="button"
          >
            请选择文件
          </button>
          <span
            class="c8"
          >
            请选择符合规则的文件
          </span>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <div
              class="c12"
            >
              你还未上传任何内容
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="c6"
        >
          <input
            hidden=""
            type="file"
          />
          <button
            class="c7"
            type="button"
          >
            请选择文件
          </button>
          <span
            class="c8"
          >
            请选择符合规则的文件
          </span>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <div
              class="c12"
            >
              你还未上传任何内容
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Form demo -- item 1`] = `
.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c13 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c7 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #FFF;
  border-color: #4683e6;
  background-color: #4683e6;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c7:hover {
  background-color: #3664c8;
}

.c7[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c11 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #6b798e;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c12 {
  display: table-cell;
  vertical-align: middle;
}

.c6 {
  display: inline-block;
  cursor: pointer;
}

.c8 {
  margin-left: 5px;
}

.c9 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c10 {
  border: none;
}

<form>
  <div
    class="c0 c1"
  >
    <div
      class="c2 c3 c4"
      span="3"
    >
      横向布局
    </div>
    <div
      class="c3 c5"
      span="9"
    >
      <div
        style="margin-bottom:5px;"
      >
        <div
          class="c6"
        >
          <input
            hidden=""
            type="file"
          />
          <button
            class="c7"
            type="button"
          >
            请选择文件
          </button>
          <span
            class="c8"
          >
            请选择符合规则的文件
          </span>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <div
              class="c12"
            >
              你还未上传任何内容
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="c6"
        >
          <input
            hidden=""
            type="file"
          />
          <button
            class="c7"
            type="button"
          >
            请选择文件
          </button>
          <span
            class="c8"
          >
            请选择符合规则的文件
          </span>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <div
              class="c12"
            >
              你还未上传任何内容
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 c3 c13"
    >
      竖向布局
    </div>
    <div
      class="c3 c13"
    >
      <div
        style="margin-bottom:5px;"
      >
        <div
          class="c6"
        >
          <input
            hidden=""
            type="file"
          />
          <button
            class="c7"
            type="button"
          >
            请选择文件
          </button>
          <span
            class="c8"
          >
            请选择符合规则的文件
          </span>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <div
              class="c12"
            >
              你还未上传任何内容
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="c6"
        >
          <input
            hidden=""
            type="file"
          />
          <button
            class="c7"
            type="button"
          >
            请选择文件
          </button>
          <span
            class="c8"
          >
            请选择符合规则的文件
          </span>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10 c11"
          >
            <div
              class="c12"
            >
              你还未上传任何内容
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;
